@@ -1,5 +1,7 @@
 NOCC 0.9.5	??   ??, 2001
 
+	* Strip comments from e-mail addresses before using on RCPT in
+	  SMTP transactions (fixes bug #430367)
 	* Added rudimentary user preferences (name, email and signature).
 	* Made textarea in send.php narrower, to accomodate 800x600 users.
 	* Removed nowrap table attributes, as they cause problems for
